@@ -23,7 +23,7 @@
         <dependency>
              <groupId>org.codehaus.groovy</groupId>
              <artifactId>groovy-all</artifactId>
-             <version>1.6.9</version>
+             <version>1.7.5</version>
         </dependency>
 
         <dependency>
@@ -33,9 +33,9 @@
         </dependency>
 
         <dependency>
-            <groupId>ant</groupId>
+            <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
-            <version>1.6.5</version>
+            <version>1.7.1</version>
         </dependency>
 
         <dependency>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.codenarc</groupId>
             <artifactId>CodeNarc</artifactId>
-            <version>0.9</version>
+            <version>0.15</version>
             <scope>test</scope>
         </dependency>
 
@@ -104,7 +104,7 @@
             <plugin>
                <groupId>org.codehaus.gmaven</groupId>
                <artifactId>gmaven-plugin</artifactId>
-               <version>1.2</version>
+               <version>1.3</version>
                <configuration>
                  <providerSelection>1.7</providerSelection>
                  <source>1.5</source>
@@ -123,7 +123,7 @@
                <dependencies>
                  <dependency>
                    <groupId>org.codehaus.gmaven.runtime</groupId>
-                   <artifactId>gmaven-runtime-1.6</artifactId>
+                   <artifactId>gmaven-runtime-1.7</artifactId>
                    <version>1.2</version>
                    <exclusions>
                      <exclusion>
@@ -135,7 +135,7 @@
                  <dependency>
                    <groupId>org.codehaus.groovy</groupId>
                    <artifactId>groovy-all</artifactId>
-                   <version>1.6.9</version>
+                   <version>1.7.5</version>
                  </dependency>
                </dependencies>
              </plugin>
