@@ -4,9 +4,12 @@ http://www.gmetrics.org
 
 Changes in version 0.4 (?? ??? 2011)
 --------------------------------------
+NEW FEATURES
+- Upgrade to Groovy 1.7. NOTE: GMetrics now requires Groovy 1.7.
+
 FIXES AND ENHANCEMENTS
 - Fix #3186167: GMetrics can't be built with Groovy >= 1.7.7. Fix illegal writes to final properties.
-
+- Upgrade to use CodeNarc 0.15 for tests/analysis.
 
 Changes in version 0.3 (23 Jul 2010)
 --------------------------------------
